test/expected/explain_ov_o_exclam_k_b.out
explain bool operator!(S) override
                       ^
24: error: member operator "!" must have exactly 0 parameters
